# solverlab

./: CMakeLists.txt  README.md  env_SOLVERLAB.sh
CDMATH/: .gitignore  CMakeLists.txt  CPackLists.txt  README.md  env_CDMATH.sh
CDMATH/cmake_files/: FindCDMATH.cmake
CDMATH/linearsolver/inc/: CMakeLists.txt  SparseMatrixPetsc.hxx
CDMATH/linearsolver/src/: CMakeLists.txt
CDMATH/mesh/inc/: Face.hxx  Mesh.hxx
CDMATH/mesh/src/: Face.cxx  Field.cxx  Mesh.cxx  Node.cxx
CDMATH/postprocessing/: PV_routines.py  VTK_routines.py
CDMATH/swig/: CMakeLists.txt
CDMATH/tests/: CMakeLists.txt
CDMATH/tests/cdmath/: CMakeLists.txt  SparseMatrixPetscTests.cxx
CDMATH/tests/examples/: CMakeLists.txt
CDMATH/tests/examples/BurgersEquation1D/: 1DBurgersEquation_shock_formation.py
CDMATH/tests/examples/EulerSystem_Shock/EulerSystemUpwind/: CMakeLists.txt  EulerSystemUpwind.py
CDMATH/tests/examples/HeatEquation1DExplicit/: HeatEquation1DExplicit.py
CDMATH/tests/examples/HeatEquation1DImplicit/: HeatEquation1DImplicit.py
CDMATH/tests/examples/Laplace-BeltramiSpectrum3DEF/: CMakeLists.txt  SpectrumFiniteElements3DLaplace-Beltrami.py
CDMATH/tests/examples/Poisson1DEF/: CMakeLists.txt  FiniteElements1DPoisson.py
CDMATH/tests/examples/Poisson1DVF/: CMakeLists.txt  FiniteVolumes1DPoisson.py
CDMATH/tests/examples/Poisson2DEF/: CMakeLists.txt
CDMATH/tests/examples/Poisson2DEF_DISK/: CMakeLists.txt  FiniteElements2DPoisson_DISK.py
CDMATH/tests/examples/Poisson2DEF_DISK_StiffBC/: CMakeLists.txt  FiniteElements2DPoisson_DISK_StiffBC.py
CDMATH/tests/examples/Poisson2DEF_SQUARE_StiffBC/: CMakeLists.txt  FiniteElements2DPoisson_SQUARE_StiffBC.py
CDMATH/tests/examples/Poisson2DVF/: CMakeLists.txt
CDMATH/tests/examples/Poisson2DVF_DISK/: CMakeLists.txt  FiniteVolumes2DPoisson_DISK.py
CDMATH/tests/examples/Poisson2DVF_DISK_StiffBC/: CMakeLists.txt  FiniteVolumes2DPoisson_DISK_StiffBC.py
CDMATH/tests/examples/Poisson3DCubeSkinEF/: CMakeLists.txt
CDMATH/tests/examples/Poisson3DEF/: CMakeLists.txt
CDMATH/tests/examples/Poisson3DEF_BALL/: CMakeLists.txt  FiniteElements3DPoisson_BALL.py
CDMATH/tests/examples/Poisson3DEF_RadiatorAndWindow/: CMakeLists.txt  FiniteElements3DPoisson_CUBE_RadiatorAndWindow.py
CDMATH/tests/examples/Poisson3DSphereEF/: CMakeLists.txt
CDMATH/tests/examples/Poisson3DTorusEF/: CMakeLists.txt  FiniteElements3DPoissonTorus.py
CDMATH/tests/examples/Poisson3DVF/: CMakeLists.txt
CDMATH/tests/examples/Poisson3DVF_BALL/: CMakeLists.txt  FiniteVolumes3DPoisson_BALL.py
CDMATH/tests/examples/SpectrumLaplace2DEF/: SpectrumLaplace2DEF_SQUARE.py
CDMATH/tests/examples/TransportEquation/: CMakeLists.txt  TransportEquationUpwind.py
CDMATH/tests/examples/TransportEquation1DCenteredExplicit/: 1DTransportEquationCenteredExplicit.py
CDMATH/tests/examples/TransportEquation1DCenteredImplicit/: 1DTransportEquationCenteredImplicit.py  CMakeLists.txt
CDMATH/tests/examples/TransportEquation1DUpwindExplicit/: 1DTransportEquationUpwindExplicit.py
CDMATH/tests/examples/TransportEquation1DUpwindImplicit/: 1DTransportEquationUpwindImplicit.py  CMakeLists.txt
CDMATH/tests/examples/WaveSystem1DStaggered_RiemannProblem/: CMakeLists.txt  WaveSystem1DStaggered_RiemannProblem.py
CDMATH/tests/examples/WaveSystem1DUpwind/: CMakeLists.txt  WaveSystem1DUpwind.py
CDMATH/tests/examples/WaveSystem1DUpwind_RiemannProblem/: CMakeLists.txt  WaveSystem1DUpwind_RiemannProblem.py
CDMATH/tests/examples/WaveSystem2DUpwind_RiemannProblem/: CMakeLists.txt  WaveSystemUpwind.py
CDMATH/tests/examples/WaveSystem_Shock/WaveSystemCentered/: CMakeLists.txt  WaveSystemCentered.py
CDMATH/tests/examples/WaveSystem_Shock/WaveSystemPStag/: CMakeLists.txt  WaveSystemPStag.py
CDMATH/tests/ressources/2DHexagonWithTriangles/: HexagonMesh.py
CDMATH/tests/ressources/3DTetrahedron/: Tetrahedron.py
CDMATH/tests/swig/: CMakeLists.txt  mainTests.py  test_PV_routines.py  test_VTK_routines.py  test_analyticalFunction_discretizer.py
CDMATH/tests/swig/BoySurface/: CMakeLists.txt
CDMATH/tests/validation/: CMakeLists.txt
CoreFlows/: CMakeLists.txt  CPackLists.txt  README.md  env_CoreFlows.sh
CoreFlows/Models/inc/: DiffusionEquation.hxx  ProblemCoreFlows.hxx  ProblemFluid.hxx  SinglePhase.hxx  StationaryDiffusionEquation.hxx  TransportEquation.hxx
CoreFlows/Models/src/: CMakeLists.txt  DiffusionEquation.cxx  DriftModel.cxx  FiveEqsTwoFluid.cxx  IsothermalSinglePhase.cxx  IsothermalTwoFluid.cxx  ProblemCoreFlows.cxx  ProblemFluid.cxx  SinglePhase.cxx  SinglePhaseStaggered.cxx  StationaryDiffusionEquation.cxx  TransportEquation.cxx
CoreFlows/cmake_files/: FindCDMATH.cmake  FindPETSc.cmake  FindPYTHON.cmake
CoreFlows/examples/: CMakeLists.txt  CoupledTransportDiffusionEquations_1DHeatedChannel.cxx  DiffusionEquation_1DHeatedRod.cxx  DiffusionEquation_1DHeatedRod_FE.cxx  StationaryDiffusionEquation_2DEF_StructuredTriangles.cxx  StationaryDiffusionEquation_2DEF_StructuredTriangles_Neumann.cxx  StationaryDiffusionEquation_2DEF_UnstructuredTriangles.cxx  StationaryDiffusionEquation_2DFV_StructuredSquares.cxx  StationaryDiffusionEquation_2DFV_StructuredTriangles.cxx  StationaryDiffusionEquation_2DFV_StructuredTriangles_Neumann.cxx  StationaryDiffusionEquation_3DEF_StructuredTetrahedra.cxx  StationaryDiffusionEquation_3DFV_StructuredTetrahedra.cxx  TransportEquation_1DHeatedChannel.cxx
CoreFlows/examples/C/: CMakeLists.txt
CoreFlows/examples/Python/: CMakeLists.txt  DiffusionEquation_1DHeatedRod.py  DiffusionEquation_1DHeatedRod_FE.py  TransportEquation_1DHeatedChannel.py
CoreFlows/examples/Python/DiffusionEquation/: DiffusionEquation_2DSpherical.py
CoreFlows/examples/Python/IsothermalSinglePhase/: IsothermalSinglePhase_1DRiemannProblem_PStaggered_symmetric.py
CoreFlows/gui/: README_solverlab.md
CoreFlows/gui/solverlabpy/: controllerSvl.py
CoreFlows/gui/ui/: MainCFWidget.py  MainCFWidget.ui
CoreFlows/swig/: CMakeLists.txt
test/: CMakeLists.txt  CTestTestfileInstall.cmake  README.md  tests.set
test/notebooks/: getting_further.py  getting_started.py  mesh_in_the_loop.py
(+59 files in other folders)
